# rust-movie-api-loader

./: .gitignore  Cargo.toml  README.md
src/: main.rs  omdb.json
